# anomaly-detection

./: CLAUDE.md  README.md  main.py  pyproject.toml
configs/: anomaly_scenarios.yaml  base.yaml
data/samples/: claims_sample.csv  contracts_sample.csv  drugs_sample.csv  formulary_sample.csv  invoices_sample.csv
data/synthetic/: README.md  anomaly_labels.parquet  contracts.parquet  drugs.parquet  formulary.parquet  invoices.parquet  invoices_with_anomalies.parquet
docs/: README.md
docs/01-getting-started/: business-context.md  overview.md  quick-start.md
docs/02-data/: data-model.md  data-quality-controls.md  hybrid-approach.md  public-datasets.md  required-data.md  synthetic-data-generation.md  target-outcomes.md  validation-testing.md
docs/03-modeling/: algorithms.md  analytic-grains.md  evaluation-metrics.md  example-workflow.md  explainability.md  feature-engineering.md  model-architecture.md  training-strategy.md
docs/04-implementation/: deployment-pipeline.md  governance-and-compliance.md  outputs-and-dashboards.md  roadmap.md
docs/05-common-patterns/: anomaly-patterns.md  best-practices.md
docs/06-reference/: python-packages.md
notebooks/: 01_generate_demo_data.ipynb  02_train_anomaly_models.ipynb
scripts/: verify_anomaly_injection.py  verify_generators.py
src/synthetic_data_gen/: __init__.py  __main__.py  config.py  generate_claims.py  generate_contracts.py  runner.py  (+6 more)
tests/: conftest.py  test_anomaly_injection.py  test_claims_generation.py  test_drug_master.py  test_reconciliation.py  test_runner.py  test_schema.py  test_validation.py
